# jonathonoh.unitybuildtools.ios

./: .gitignore  .gitmodules  README.md  example.env  pyproject.toml  upload_to_testflight.sh
Editor/: env_accessor.py  pretty_print.py
Editor/CommandUtility/: command.py  command_output.py  command_runner.py
Editor/UploadToTestFlight/: env_accessor.py  upload_to_testflight.py
Editor/UploadToTestFlight/testflight_uploader/: build_file_finder.py  testflight_uploader.py  upload_configuration.py
Editor/command_utility/: __init__.py  command.py
src/: fastlane_pilot_output_log_parser.py
src/ucb_to_testflight/: __init__.py  api_key.py  build_file_finder.py  env_accessor.py  upload_parameters.py  upload_to_test_flight.py  upload_to_testflight.py
tests/: run_all.py
tests/build_file_finder/: test_build_file_finder.py
tests/entrypoint/: test_upload_to_testflight_cmd_entry.py
tests/upload/: test_upload_to_test_flight.py
tests/upload_parameters/: test_upload_parameters.py
tools/: check_no_submodules.sh  install_deps.sh
